force-app/main/default/objects/Association_PUDO_Macroprofil__mdt/Association_PUDO_Macroprofil__mdt.object-meta.xml
<CustomObject>
    <description>Cet objet contient les pays et types de point associés à chaque Macroprofil d&#39;un PUDO</description>
    <label>Association PUDO Macroprofil</label>
    <pluralLabel>Association PUDO Macroprofils</pluralLabel>
</CustomObject>