force-app/main/default/objects/Association_PUDO_Macroprofil__mdt/fields/Id_du_Macroprofil__c.field-meta.xml
<CustomField>
    <fullName>Id_du_Macroprofil__c</fullName>
    <label>Id du Macroprofil</label>
    <length>18</length>
    <type>Text</type>
</CustomField>