force-app/main/default/objects/Association_PUDO_Macroprofil__mdt/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <label>Partenaire</label>
    <length>200</length>
    <type>Text</type>
</CustomField>