force-app/main/default/objects/Association_PUDO_Macroprofil__mdt/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <length>200</length>
    <type>Text</type>
</CustomField>