force-app/main/default/objects/Association_PUDO_Macroprofil__mdt/fields/Type_de_point__c.field-meta.xml
<CustomField>
    <fullName>Type_de_point__c</fullName>
    <label>Type de point</label>
    <length>200</length>
    <type>Text</type>
</CustomField>