force-app/main/default/objects/Association_PUDO_Macroprofil__mdt/listViews/BNL.listView-meta.xml
<ListView>
    <fullName>BNL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Id_du_Macroprofil__c</columns>
    <columns>Partenaire__c</columns>
    <columns>Pays__c</columns>
    <columns>Type_de_point__c</columns>
    <filterScope>Everything</filterScope>
    <label>BNL</label>
    <language>fr</language>
</ListView>